tests/NormalTests/paczka1/small_fuzzy/63298327.err
Error in line 16: rDEJ19pqUN9 A890 -5,3
